syntax = "proto2";
package msg;
import "serialize.proto";

// 添加收货地址
message C2GW_AddDeliveryAddress {
    optional msg.UserAddress info = 1;
}

// 删除地址
message C2GW_DelDeliveryAddress {
    optional uint32 index = 1;
}

// 修改地址
message C2GW_ChangeDeliveryAddress {
    optional uint32 index = 1;
    optional msg.UserAddress info = 2;
}

// 同步地址列表
message GW2C_SendDeliveryAddressList {
    repeated msg.UserAddress list = 1;
}

// 请求充值页面
message C2GW_ReqRechargeMoney {
    optional uint32 amount = 1;
    optional string token = 2;
    optional uint32 type = 3;
}

// 返回充值请求
message GW2C_RetRechargeMoney {
    optional string urlcheckout = 1;
}

// 红包平台充值完成通知
message C2GW_PlatformRechargeDone {
    optional uint64 userid = 1;
}

// 同步玩家绑定微信信息
message GW2C_SendWechatInfo {
    optional string openid = 1;
}

// 抽奖
message C2GW_StartLuckyDraw {
    optional uint64 userid = 1;
}

message GW2C_LuckyDrawHit {
    optional int32 id = 1;
}

// 免费赠送金币
message GW2C_FreePresentNotify {
    optional int32 money = 1;
}

// 发送任务列表
message GW2C_SendTaskList {
    repeated msg.TaskData tasks = 1;
}

// 抽奖历史记录
message GW2C_SendLuckyDrawRecord {
    optional LuckyDrawRecord luckydraw = 1;
}

// 请求任务列表
message C2GW_ReqTaskList {
	
}

// 请求房屋信息
message C2GW_ReqHouseData {
	
}

// 返回房屋信息
message GW2C_AckHouseData {
	repeated msg.HouseData datas = 1;
}

// 请求设置引导标记
message C2GW_ReqSetNewPlayerStep {
	optional uint32 step = 1;
}

// 返回设置引导标记
message GW2C_AckNewPlayerStep {
	optional uint32 step = 1;
}


//玩家请求升级房屋
message C2GW_ReqHouseLevelUp {
	optional uint64 houseid = 1;
}
 
//返回升级房屋
message GW2C_AckHouseLevelUp {
	optional uint64 houseid = 1;
	optional uint32 ret = 2;
}

//玩家请求升级房屋的房间
message C2GW_ReqHouseCellLevelUp {
	optional uint64 houseid = 1;
	optional uint32 index = 2;
}

//返回玩家请求升级房屋的房间
message GW2C_AckHouseCellLevelUp {
	optional uint64 houseid = 1;
	optional uint32 index = 2;
	optional uint32 ret = 3;
}

//玩家请求收金币
message C2GW_ReqTakeSelfHouseGold {
	optional uint64 houseid = 1;
	optional uint32 index = 2;
}

//返回玩家请求收金币
message GW2C_AckTakeSelfHouseGoldRet {
	optional uint64 houseid = 1;
	optional uint32 index = 2;
	optional uint32 gold = 3;
}

//玩家请求抢别人金币
message C2GW_ReqTakeOtherHouseGold {
	optional uint64 houseid = 1;
	optional uint32 index = 2;
}

//返回玩家请求抢别人金币
message GW2C_AckTakeOtherHouseGoldRet {
	optional uint64 houseid = 1;
	optional uint32 index = 2;
	optional uint32 gold = 3;
}

//获取随机的房屋列表
message C2GW_ReqRandHouseList {
	
}

//返回随机的房屋列表
message GW2C_AckRandHouseList {
	repeated msg.HouseData datas = 1;
}

//更新抢钱次数
message GW2C_NotifyRobCount {
	optional uint32 value = 1;
}


